--- a/src/pages/commom/components/side-bar.module.scss
+++ b/src/pages/commom/components/side-bar.module.scss
@@ -6,7 +6,7 @@
 .overlay {
   display: none;
 }
-.brandConatiner {
+.brandContainer {
   height: 70px;
   display: flex;
   justify-content: center;
@@ -14,6 +14,8 @@
   .text {
     color: #fff;
     font-size: var(--medium-font-size);
+    font-weight: 700;
+    text-transform: uppercase;
   }
 }
 .listcontainer {
